04.ingree_demo/ingress-demo2/ingress-web.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-httpd
  namespace: ingress-web-test

spec:
  rules:
    - host: nginx.linux.com     #测试域名
      http:
        paths:
          - backend:
              serviceName: cloud-nginx
              servicePort: 8088

    - host: httpd.linux.com     #测试域名
      http:
        paths:
          - backend:
              serviceName: cloud-httpd
              servicePort: 8089
